[package]
name = "aspect-ratio"
version = "0.1.0"
edition = "2021"
authors = ["jeorb <andy.meier@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/jeorb/rust-ui-experiments"
repository = "https://github.com/jeorb/rust-ui-experiments"
description = """
This experiment is to determine if a single layout can be created that works 
for all aspect ratios.
"""

[dependencies]
macroquad = "0.3"
